--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
 Link to mods below. Password is 1231 <br>
+<style>
 
-<a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t"> This is it. aaaaaa</a>
+    a {text-decoration: none; /*убираем подчеркивание текста ссылок*/}
+    body {
+        background: url(ed_chicken.png);
+        background-size: 100%;
+    }
+    ul {
+        list-style: none;
+        margin-right: 23.9%;
+        margin-left: 23%;
+        padding-left:0;
+        background:#003099;
+        height: 100px;
+    }
+    a {
+        background:#B200FF;
+        color:#fff;
+        padding:0px 50px;
+        font-family: arial;
+        line-height:100px;
+        display: block;
+        border-right: 3px solid #003099;
+
+
+
+    }
+    li {
+        float:left;
+    }
+
+
+
+
+
+
+
+</style>
+
+<a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t"> This is it</a>
