--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@ Link to mods below. Password is 1231 <br>
 </style>
 
 <a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t"> This is it</a>
+<img src="ed1.jpg"/>
