--- a/index.html
+++ b/index.html
@@ -1,41 +1,90 @@
-Link to mods below. Password is 1231 <br>
+<br>
 <style>
 
-    a {text-decoration: none; /*убираем подчеркивание текста ссылок*/}
+    a {
+        text-decoration: none;
+    }
+
     body {
-        background: url(ed_chicken.png);
+        background: url(chicken.png);
         background-size: 100%;
     }
-    ul {
-        list-style: none;
-        margin-right: 23.9%;
-        margin-left: 23%;
-        padding-left:0;
-        background:#003099;
-        height: 100px;
-    }
-    a {
-        background:#B200FF;
-        color:#fff;
-        padding:0px 50px;
-        font-family: arial;
-        line-height:100px;
-        display: block;
-        border-right: 3px solid #003099;
 
-
-    }
-    li {
-        float:left;
+    div{
+    font-size: 12px;
+        margin-left: 30%;
+        margin-right: 30%;
+        /*margin-top: 5%;*/
+        font-style: inherit;
+        border-radius: 10px;
+        background-color: #EFF7FF;
+        font-family: "Bahnschrift";
+        background: rgba(239, 247, 255, 0.7);
+        /*line-height: px;*/
     }
 
 
-
-
-
+    .knockout {
+        background: url(http://apod.nasa.gov/apod/image/0603/coma_misti.jpg) -50px -50px;
+        color: red;
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-weight: bold;
+        font-size: 50px;
+        width: 600px;
+        margin: 20px auto;
+        text-align: center;
+    }
+    .knockout1 {
+        background: url(http://apod.nasa.gov/apod/image/0603/coma_misti.jpg) -50px -50px;
+        color: red;
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-weight: bold;
+        font-size: 40px;
+        width: 600px;
+        margin: 20px auto;
+        text-align: center;
+    }
 
 
 </style>
+<body>
 
-<a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t"> This is it</a>
-<img src="ed1.jpg"/>
+<div class="knockout"><a>Minecraft</a></div>
+<div class="knockout1"><a>custom modpack installation</a></div>
+
+
+<div >
+    <br>
+    1.  &#10240 Download minecraft Tlauncher <a href="https://tlauncher.org/installer"><img src="d_icon.png" height="35" width="35"/></a><br>
+    2.  &#10240  Run it on version 1.12.2 <br>
+    3.  &#10240  When you get minecraft main menu you can exit. <br>
+    4.  &#10240  Download actual mod-pack. <a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t">
+    <img src="d_icon.png" height="35" width="35"/></a>(password:1231)<br>
+    5.  &#10240  Also download latest forge version. <a href="https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.12.2-14.23.4.2760/forge-1.12.2-14.23.4.2760-universal.jar">
+    <img src="d_icon.png" height="35" width="35"/></a><br>
+    6.  &#10240  (On this step you are searching minecraft source folder) In windows 'run' field write '%appdata%', then you need to find folder '.minecraft'.<br>
+    7.  &#10240  Import mods from downloaded archive in 4-th step to the .minecraft mods folder. Do the same with config folder.<br>
+    8.  &#10240  Open forge installer (5-th step), install and extract it to '.minecraft'.<br>
+    9.  &#10240  Run T-launcher again.<br><br>
+    * &#10240  Here you can change default settings of launcher. If you have 64-bit OS it's recommended to install
+    64-bit java
+    <a href="http://javadl.oracle.com/webapps/download/AutoDL?BundleId=234474_96a7b8442fe848ef90c96a2fad6ed6d1">
+        <img src="d_icon.png" height="35" width="35"/></a>
+    and select more RAM-memory to run minecraft.<br> For example, if you have 8GB RAM, it's better to set
+    approximately 4096MB RAM. <br><br>
+    10.  &#10240  Select in forge versions the latest one (1.12.2-forge 1.12.2-14.23.4.2760).<br>
+    11.  &#10240  Run minecraft.<br>
+    12.  &#10240  In multiplayer add new server and enter address: looga.net:25003<br>
+    13.  &#10240  Enter to our server!<br>
+</div>
+
+<script>
+    var timer = setTimeout(function() {
+        document.body.style.backgroundImage = "url('ed_chicken.png')"
+    }, 120000);
+</script>
+
+
+</body>
