--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<br>
-<style>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+
+<<style>
 
     a {
         text-decoration: none;
@@ -8,10 +14,11 @@
     body {
         background: url(chicken.png);
         background-size: 100%;
+        background-attachment:fixed
     }
 
     div{
-    font-size: 12px;
+    font-size: 13px;
         margin-left: 30%;
         margin-right: 30%;
         /*margin-top: 5%;*/
@@ -61,7 +68,7 @@
     2.  &#10240  Run it on version 1.12.2 <br>
     3.  &#10240  When you get minecraft main menu you can exit. <br>
     4.  &#10240  Download actual mod-pack. <a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t">
-    <img src="d_icon.png" height="35" width="35"/></a>(password:1231)<br>
+    <img src="d_icon.png" height="35" width="35"/></a>(password: 1231)<br>
     5.  &#10240  Also download latest forge version. <a href="https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.12.2-14.23.4.2760/forge-1.12.2-14.23.4.2760-universal.jar">
     <img src="d_icon.png" height="35" width="35"/></a><br>
     6.  &#10240  (On this step you are searching minecraft source folder) In windows 'run' field write '%appdata%', then you need to find folder '.minecraft'.<br>
