--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                                                                            width="35"/></a><br>
     2. &#10240 Run it on version 1.12.2 <br>
     3. &#10240 When you get minecraft main menu you can exit. <br>
-    4. &#10240 Download actual mod-pack. <a href="https://cloud.looga.net/s/cYiuctk9y0vAh9t">
+    4. &#10240 Download actual mod-pack. <a target="_blank" rel="noopener noreferrer" href="https://cloud.looga.net/s/cYiuctk9y0vAh9t">
     <img src="d_icon.png" height="35" width="35"/></a>(password: 1231)<br>
     5. &#10240 Also download latest forge version. <a
         href="https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.12.2-14.23.4.2760/forge-1.12.2-14.23.4.2760-universal.jar">
